--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,40 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <title>Titre de la page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
- 
-</body>
+<!DOCTYPE html>     
+<html lang="fr" lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <!-- <link rel="shorcut icon" type="images/ico" href="images/doigt.ico"> -->
+    <title>NSI - ARTHUR EXPOSITO</title>
+  </head>
+  <body>
+    <div id="top-menu">
+      <strong>
+        <a href="index.html" class="active">Accueil</a>
+        <a href="trou_noir.html">Les Trous Noirs</a>
+        <a href="nebu.html">les Nébuleuses</a>
+        <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
+        <a href="galerie.html">Le plus beau phénomène spatiale</a>
+      </strong>
+    </div>
+    <div id="en-tete">
+      <header>
+        <h1><p>Les plus beaux phénomènes spatiaux</p></h1>
+        <h3><p>par Arthur Exposito.</p></h3>
+      </header>
+    </div>
+    <br>
+    <main id="page_main">
+      <article style="color:rgb(255,255,255);">
+        <div class="container">
+          <input class="button_one" type="button" value="click to test ;)">
+        </div>
+      </article>
+    </main>
+    <footer>
+      <div class="bas_de_page">
+        <a href="https://www.instagram.com/arthur_expst/?hl=fr" target=_blank>Arthur Exposito</a>
+      </div>
+    </footer>
+  </body>
 </html>
