--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
     <!-- <link rel="shorcut icon" type="images/ico" href="images/doigt.ico"> -->
     <title>NSI - ARTHUR EXPOSITO</title>
   </head>
