--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,9 @@
     <main id="page_main">
       <article style="color:rgb(255,255,255);">
         <div class="container">
-          <input class="button_one" type="button" value="click to test ;)">
+          <center>
+            <input class="button_one" type="button" value="click to test ;)">
+          <center>
         </div>
       </article>
     </main>
