--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <div class="container">
           <center>
             <input class="button_one" type="button" value="click to test ;)">
-          <center>
+          </center>
         </div>
       </article>
     </main>
