linked the javascript with the html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,5 +38,6 @@
         <a href="https://www.instagram.com/arthur_expst/?hl=fr" target=_blank>Arthur Exposito</a>
       </div>
     </footer>
+    <script src="static/JS/main.js"></script>
   </body>
 </html>
