--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,17 +1,19 @@
 body {
-    background-image: url(http://iwallpapers2.free.fr/images/Espace/Espace_etoiles_-_1920x1080.jpg);
+    background-color: #d1f6ff;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
-   
+
+/* color for plus tard : site : https://www.0to255.com/00c4f3 */
+
 #top-menu {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: auto;
-    background-color: rgba(6, 0, 43, 0.9);
+    background-color: rgba(0, 141, 175, 0.99);
     overflow: auto;
     white-space: nowrap;
     margin: 0;
@@ -29,7 +31,7 @@ body {
 }
 
 #top-menu a:hover {
-    background-color: rgb(0, 20, 107);
+    background-color: #00728d;
     text-decoration: underline;
 }
    
@@ -46,14 +48,15 @@ body {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    color: rgb(255, 255, 255);
+    color:  rgb(0, 141, 175);
 }   
 
 #page_main {
+    padding : 20 10 5;
     top: 105px;
     bottom: 5px;
     padding-right: 50%;
-    background-color: rgba(5, 0, 95, 0.2);
+    background-color: rgba(17, 255, 124, 0.87);
     border-style: groove;
     border-color: rgb(5, 0, 95);
     background-attachment: fixed;
@@ -67,20 +70,29 @@ body {
     margin: center;
 } */
 
-.button_one {
+.button {
     border: 0;
     line-height: 2.5;
-    margin: center;
+    padding: 0 20px;
     font-size: 1rem;
     text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
-    background-color: rgba(220, 0, 0, 1);
+    background-color: rgb(255, 255, 255);
 }
-   
+
+.button:hover {
+    background-color: rgb(0, 0, 0);
+}
+
+.button:active {
+    background-color: rgba(255, 255, 255, 0.6);
+}
 .bas_de_page {
     position: absolute;
     top: 100% ;
-    left: 0;
+    left: 0; 
     width: 100%;
     height:40px;
     background-color: rgb(6, 0, 43);
