--- a/templates/index.html
+++ b/templates/index.html
@@ -3,33 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
-    <!-- <link rel="shorcut icon" type="images/ico" href="images/doigt.ico"> -->
-    <title>NSI - ARTHUR EXPOSITO</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Well Played Music</title>
   </head>
   <body>
     <div id="top-menu">
       <strong>
-        <a href="index.html" class="active">Accueil</a>
-        <a href="trou_noir.html">Les Trous Noirs</a>
-        <a href="nebu.html">les Nébuleuses</a>
+        <a href="index.html" class="active">Acceuil</a>
+        <a href="trou_noir.html">Jouez</a>
+        <a href="nebu.html">Crédits</a>
         <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
-        <a href="galerie.html">Le plus beau phénomène spatiale</a>
       </strong>
     </div>
     <div id="en-tete">
       <header>
-        <h1><p>Les plus beaux phénomènes spatiaux</p></h1>
-        <h3><p>par Arthur Exposito.</p></h3>
+        <h1><p>Well Playd Music</p></h1>
+        <h3><p>par NSI gans</p></h3>
       </header>
     </div>
     <br>
     <main id="page_main">
       <article style="color:rgb(255,255,255);">
         <div class="container">
-          <center>
-            <input class="button_one" type="button" value="click to test ;)">
-          </center>
+          <input class="button" type="button" value="click to test ;)">
         </div>
       </article>
     </main>
