--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="pinao.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music</title>
   </head>
   <body>
@@ -25,7 +26,33 @@
     <main id="page_main">
       <article style="color:rgb(255,255,255);">
         <div class="container">
-          <input class="button" type="button" value="click to test ;)">
+          <div class="piano">
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+            <div class="key black" data-note="C"></div>
+            <div class="key white" data-note="C"></div>
+        </div>
+    
         </div>
       </article>
     </main>
