--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -13,7 +13,7 @@ body {
     left: 0;
     width: 100%;
     height: auto;
-    background-color: rgba(0, 141, 175, 0.99);
+    background-color: rgb(0, 141, 175);
     overflow: auto;
     white-space: nowrap;
     margin: 0;
@@ -63,12 +63,13 @@ body {
     text-align: left;
 }
    
-/* .container {
+.container {
+    padding: 20px 20px 20px 20px;
     font-size: 20px;
     text-decoration: none;
     text-align: justify;
     margin: center;
-} */
+} 
 
 .button {
     border: 0;
@@ -87,7 +88,7 @@ body {
 }
 
 .button:active {
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: #00aafa;
 }
 .bas_de_page {
     position: absolute;
