--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/style.css" rel="stylesheet" type="text/css" />
-    <link href="static/pinao.css" rel="stylesheet" type="text/css" />
+    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
+    <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music</title>
   </head>
   <body>
