added onclick option

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
       <article style="color:rgb(255,255,255);">
         <div class="container">
           <div class="piano">
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
+            <div onclick="playMusic('sncf')" class="key white" data-note="C"></div>
+            <div onclick="playMusic('cash')" class="key black" data-note="C"></div>
             <div class="key white" data-note="C"></div>
             <div class="key black" data-note="C"></div>
             <div class="key white" data-note="C"></div>
@@ -64,3 +64,4 @@
     <script src="static/JS/main.js"></script>
   </body>
 </html>
+
