--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
-    <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="pinao.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music</title>
   </head>
   <body>
@@ -27,30 +27,32 @@
       <article style="color:rgb(255,255,255);">
         <div class="container">
           <div class="piano">
-            <div onclick="playMusic('sncf')" class="key white" data-note="C"></div>
-            <div onclick="playMusic('cash')" class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
-            <div class="key black" data-note="C"></div>
-            <div class="key white" data-note="C"></div>
+            <div onclick="playMusic('sncf')" class="white" data-note="C"></div>
+            <div onclick="playMusic('cash')" class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
+            <div class="black" data-note="C"></div>
+            <div class="white" data-note="C"></div>
         </div>
     
         </div>
@@ -64,4 +66,3 @@
     <script src="static/JS/main.js"></script>
   </body>
 </html>
-
