added all sounds ,ré1 missing though

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,32 +27,31 @@
       <article style="color:rgb(255,255,255);">
         <div class="container">
           <div class="piano">
-            <div onclick="playMusic('sncf')" class="white" data-note="C"></div>
-            <div onclick="playMusic('cash')" class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
-            <div class="black" data-note="C"></div>
-            <div class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-18')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-02')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-01')" class="black" data-note="C"></div>
+            <div onclick="playMusic('')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-15')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-13')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-06')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-05')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-21')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-20')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-10')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-09')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-19')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-04')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-03')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-17')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-16')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-14')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-08')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-07')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-23')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-22')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-12')" class="white" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-11')" class="black" data-note="C"></div>
+            <div onclick="playMusic('do1 dièse-1')" class="white" data-note="C"></div>
         </div>
     
         </div>
