--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
     </div>
     <div id="en-tete">
       <header>
-        <h1><p>Well Playd Music</p></h1>
-        <h3><p>par NSI gans</p></h3>
+        <h1><p>Well Played Music</p></h1>
+        <h3><p>par NSI gang</p></h3>
       </header>
     </div>
     <br>
