--- a/templates/index.html
+++ b/templates/index.html
@@ -57,11 +57,14 @@
         </div>
       </article>
     </main>
-    <footer>
+
       <div class="bas_de_page">
         <a href="https://www.instagram.com/arthur_expst/?hl=fr" target=_blank>Arthur Exposito</a>
+        <a href="https://www.instagram.com/simon.dmy/?hl=fr" target=_blank>Simon Dumesny</a>
+        <a href="https://www.instagram.com/ozouxguillaume/?hl=fr" target=_blank>Guillaume Ozoux</a>
+        <a href="https://www.instagram.com/vic_b.dx/?hl=fr" target=_blank>Victor Balu</a>
       </div>
-    </footer>
+
     <script src="static/JS/main.js"></script>
   </body>
 </html>
