--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,5 +1,20 @@
+:root{
+    --color1 : #000000 ;
+    --color2 : #2F4550 ;
+    --color3 : #5f7683 ;
+    --color4 : #586F7C ;
+    --color-font : #1e3847;
+    --color5 : #708A94 ;
+    --color6 : #88A5AB ;
+    --color7 : #A0CFCD ;
+    --color8 : #9ed1cf ;
+    --color9 : #D6E8E9 ;
+    --color10: #F4F4F9 ;
+
+}
+
 body {
-    background-color: #d1f6ff;
+    background-color: var(--color7);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -13,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: auto;
-    background-color: rgb(0, 141, 175);
+    background-color: var(--color5);
     overflow: auto;
     white-space: nowrap;
     margin: 0;
@@ -23,7 +38,7 @@ body {
    
 #top-menu a {
     display: inline-block;
-    color: rgb(255, 255, 255);
+    color: var(--color10);
     padding: 14px;
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -31,15 +46,15 @@ body {
 }
 
 #top-menu a:hover {
-    background-color: #00728d;
+    background-color: var(--color1);
+    border-radius: 10px;
     text-decoration: underline;
 }
    
 #en-tete {
     position: inherit;
-    background-color: rgba(255, 0, 0, 0);
-    border-style: groove;
-    border-color: rgb(5, 0, 95);
+    /*border-style: groove;*/
+    /*border-color: rgb(5, 0, 95);*/
     padding-top: 35px;
     padding-bottom: 2px;
 }
@@ -48,7 +63,7 @@ body {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    color:  rgb(0, 141, 175);
+    color:  var(--color10)  ;
 }   
 
 #page_main {
@@ -56,9 +71,9 @@ body {
     top: 105px;
     bottom: 5px;
     padding-right: 50%;
-    background-color: rgba(17, 255, 124, 0.87);
-    border-style: groove;
-    border-color: rgb(5, 0, 95);
+    background-color: var(--color9);
+    /*border-style: groove;*/
+    /*border-color: rgb(5, 0, 95);*/
     background-attachment: fixed;
     text-align: left;
 }
@@ -94,14 +109,11 @@ body {
 
 .bas_de_page {
     position: absolute;
-    top: 100% ;
-    left: 0; 
     width: 100%;
-    height:40px;
+    height: 10%;
     background-color: rgb(6, 0, 43);
     overflow: auto;
     white-space: nowrap;
-    margin: 0;
     text-align: center;
 }
    
