--- a/templates/index.html
+++ b/templates/index.html
@@ -27,31 +27,30 @@
       <article style="color:rgb(255,255,255);">
         <div class="container">
           <div class="piano">
-            <div onclick="playMusic('do1 dièse-18')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-02')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-01')" class="black" data-note="C"></div>
-            <div onclick="playMusic('')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-15')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-13')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-06')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-05')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-21')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-20')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-10')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-09')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-19')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-04')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-03')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-17')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-16')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-14')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-08')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-07')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-23')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-22')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-12')" class="white" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-11')" class="black" data-note="C"></div>
-            <div onclick="playMusic('do1 dièse-1')" class="white" data-note="C"></div>
+           <div onmousedown="piano.playMusic(0)" onmouseup="piano.musicpause(0)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(1)" onmouseup="piano.musicpause(1)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(2)" onmouseup="piano.musicpause(2)"  class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(3)" onmouseup="piano.musicpause(3)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(4)" onmouseup="piano.musicpause(4)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(5)" onmouseup="piano.musicpause(5)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(6)" onmouseup="piano.musicpause(6)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(7)" onmouseup="piano.musicpause(7)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(8)" onmouseup="piano.musicpause(8)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(9)" onmouseup="piano.musicpause(9)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(10)" onmouseup="piano.musicpause(10)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(11)" onmouseup="piano.musicpause(11)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(12)" onmouseup="piano.musicpause(12)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(13)" onmouseup="piano.musicpause(13)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(14)" onmouseup="piano.musicpause(14)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(15)" onmouseup="piano.musicpause(15)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(16)" onmouseup="piano.musicpause(16)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(17)" onmouseup="piano.musicpause(17)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(18)" onmouseup="piano.musicpause(18)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(19)" onmouseup="piano.musicpause(19)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(20)" onmouseup="piano.musicpause(20)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(21)" onmouseup="piano.musicpause(21)" class="white" data-note="C"></div>
+            <div onmousedown="piano.playMusic(22)" onmouseup="piano.musicpause(22)" class="black" data-note="C"></div>
+            <div onmousedown="piano.playMusic(23)" onmouseup="piano.musicpause(23)" class="white" data-note="C"></div>
         </div>
     
         </div>
