--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
     <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="iconewellplaymusic.png">
   </head>
   <body>
     <div id="top-menu">
