--- a/templates/index.html
+++ b/templates/index.html
@@ -28,30 +28,30 @@
       <article style="color:rgb(255,255,255);">
         <div class="container">
           <div class="piano">
-           <div onmousedown="piano.playMusic(0)" onmouseup="piano.musicpause(0)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(1)" onmouseup="piano.musicpause(1)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(2)" onmouseup="piano.musicpause(2)"  class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(3)" onmouseup="piano.musicpause(3)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(4)" onmouseup="piano.musicpause(4)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(5)" onmouseup="piano.musicpause(5)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(6)" onmouseup="piano.musicpause(6)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(7)" onmouseup="piano.musicpause(7)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(8)" onmouseup="piano.musicpause(8)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(9)" onmouseup="piano.musicpause(9)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(10)" onmouseup="piano.musicpause(10)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(11)" onmouseup="piano.musicpause(11)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(12)" onmouseup="piano.musicpause(12)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(13)" onmouseup="piano.musicpause(13)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(14)" onmouseup="piano.musicpause(14)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(15)" onmouseup="piano.musicpause(15)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(16)" onmouseup="piano.musicpause(16)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(17)" onmouseup="piano.musicpause(17)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(18)" onmouseup="piano.musicpause(18)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(19)" onmouseup="piano.musicpause(19)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(20)" onmouseup="piano.musicpause(20)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(21)" onmouseup="piano.musicpause(21)" class="white" data-note="C"></div>
-            <div onmousedown="piano.playMusic(22)" onmouseup="piano.musicpause(22)" class="black" data-note="C"></div>
-            <div onmousedown="piano.playMusic(23)" onmouseup="piano.musicpause(23)" class="white" data-note="C"></div>
+           <div onmousedown="piano.playMusic(0)" onmouseup="piano.musicpause(0)" class="white"    id="0" ></div>
+            <div onmousedown="piano.playMusic(1)" onmouseup="piano.musicpause(1)" class="black"   id="1" ></div>
+            <div onmousedown="piano.playMusic(2)" onmouseup="piano.musicpause(2)"  class="white"  id="2" ></div>
+            <div onmousedown="piano.playMusic(3)" onmouseup="piano.musicpause(3)" class="black"   id="3" ></div>
+            <div onmousedown="piano.playMusic(4)" onmouseup="piano.musicpause(4)" class="white"   id="4" ></div>
+            <div onmousedown="piano.playMusic(5)" onmouseup="piano.musicpause(5)" class="white"   id="5" ></div>
+            <div onmousedown="piano.playMusic(6)" onmouseup="piano.musicpause(6)" class="black"   id="6" ></div>
+            <div onmousedown="piano.playMusic(7)" onmouseup="piano.musicpause(7)" class="white"   id="7" ></div>
+            <div onmousedown="piano.playMusic(8)" onmouseup="piano.musicpause(8)" class="black"   id="8" ></div>
+            <div onmousedown="piano.playMusic(9)" onmouseup="piano.musicpause(9)" class="white"   id="9" ></div>
+            <div onmousedown="piano.playMusic(10)" onmouseup="piano.musicpause(10)" class="black" id="10" ></div>
+            <div onmousedown="piano.playMusic(11)" onmouseup="piano.musicpause(11)" class="white" id="11" ></div>
+            <div onmousedown="piano.playMusic(12)" onmouseup="piano.musicpause(12)" class="white" id="12" ></div>
+            <div onmousedown="piano.playMusic(13)" onmouseup="piano.musicpause(13)" class="black" id="13" ></div>
+            <div onmousedown="piano.playMusic(14)" onmouseup="piano.musicpause(14)" class="white" id="14" ></div>
+            <div onmousedown="piano.playMusic(15)" onmouseup="piano.musicpause(15)" class="black" id="15" ></div>
+            <div onmousedown="piano.playMusic(16)" onmouseup="piano.musicpause(16)" class="white" id="16" ></div>
+            <div onmousedown="piano.playMusic(17)" onmouseup="piano.musicpause(17)" class="white" id="17" ></div>
+            <div onmousedown="piano.playMusic(18)" onmouseup="piano.musicpause(18)" class="black" id="18" ></div>
+            <div onmousedown="piano.playMusic(19)" onmouseup="piano.musicpause(19)" class="white" id="19" ></div>
+            <div onmousedown="piano.playMusic(20)" onmouseup="piano.musicpause(20)" class="black" id="20" ></div>
+            <div onmousedown="piano.playMusic(21)" onmouseup="piano.musicpause(21)" class="white" id="21" ></div>
+            <div onmousedown="piano.playMusic(22)" onmouseup="piano.musicpause(22)" class="black" id="22" ></div>
+            <div onmousedown="piano.playMusic(23)" onmouseup="piano.musicpause(23)" class="white" id="23" ></div>
         </div>
     
         </div>
