--- a/static/CSS/pinao.css
+++ b/static/CSS/pinao.css
@@ -51,3 +51,14 @@
 .black:active {
     background-color: #00aafa;
 }
+
+/* utilisé pour les touches activées depuis le clavier*/
+.blackActivated {
+    background-color: #00aafa;
+}
+
+.whiteActivated {
+    background-color: #c2c2c2;
+    box-shadow: 0 0 5px #c5c5c5, 0 0 25px #6b6b6b, 0 0 50px #585858;
+    transition: 300ms;
+}
