--- a/static/CSS/pinao.css
+++ b/static/CSS/pinao.css
@@ -7,8 +7,8 @@
 
 .piano {
     height: 50vh;
-    width: 200%;
-    display: flex;
+    width: 206%;
+    display: flex ;
     justify-content: center;
 }
 
@@ -23,13 +23,13 @@
 .white:hover {
     background: #ffffff;
     box-shadow: 0 0 5px #c5c5c5, 0 0 25px #6b6b6b,
-     0 0 50px #585858;
-     transition: 300ms;
+     0 0 50px #9e9e9e;
+    /*transition: 200ms;*/
     
 }
 
 .white:active {
-    background-color: #c2c2c2;
+    background-color: #d1d1d1;
 }
 
 .black {
@@ -45,11 +45,15 @@
 }
 
 .black:hover {
-    background-color: rgb(255, 1, 1);
+    background-color: rgb(27, 27, 27);
+    box-shadow: 0 0 5px #c5c5c5, 0 0 25px #6b6b6b,
+    0 0 50px #9e9e9e;
 }
 
 .black:active {
-    background-color: #00aafa;
+    background-color: rgba(0,0,0,0);
+    background-image: url(https://us.123rf.com/450wm/chuckchee/chuckchee1510/chuckchee151000052/45725801-pixel-art-fond-avec-arc-en-ciel-de-couleur-vagues.jpg?ver=6);
+    /*background-color: #5a8b92;*/
 }
 
 /* utilisé pour les touches activées depuis le clavier*/
