--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -7,14 +7,14 @@
     --color5 : #708A94 ;
     --color6 : #88A5AB ;
     --color7 : #A0CFCD ;
-    --color8 : #9ed1cf ;
+    --color8 : #9ec7d1 ;
     --color9 : #D6E8E9 ;
-    --color10: #F4F4F9 ;
+    --color10: #ffffff ;
 
 }
 
 body {
-    background-color: var(--color7);
+    background-color: var(--color8);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: auto;
-    background-color: var(--color5);
+    background-color: var(--color3);
     overflow: auto;
     white-space: nowrap;
     margin: 0;
@@ -46,7 +46,7 @@ body {
 }
 
 #top-menu a:hover {
-    background-color: var(--color1);
+    background-color: var(--color2);
     border-radius: 10px;
     text-decoration: underline;
 }
@@ -63,11 +63,11 @@ body {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    color:  var(--color10)  ;
+    color:  var(--color10) ;
 }   
 
 #page_main {
-    padding : 20 10 5;
+    padding : 20 10 10;
     top: 105px;
     bottom: 5px;
     padding-right: 50%;
@@ -111,7 +111,7 @@ body {
     position: absolute;
     width: 100%;
     height: 10%;
-    background-color: rgb(6, 0, 43);
+    background-color: var(--color3);
     overflow: auto;
     white-space: nowrap;
     text-align: center;
@@ -124,10 +124,10 @@ body {
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    text-size-adjust: 10px;
+    text-size-adjust: 15px;
 }
 
 .bas_de_page a:hover {
-    background-color: rgb(0, 20, 107);
+    background-color: var(--color2);
     text-decoration: underline;
 }
