--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
-    <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css" />
+    <link href="static/style.css" rel="stylesheet" type="text/css" />
+    <link href="static/pinao.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusic.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusic.png">
   </head>
   <body>
     <div id="top-menu">
@@ -52,8 +52,10 @@
             <div onmousedown="piano.playMusic(21)" onmouseup="piano.musicpause(21)" class="white" id="21" ></div>
             <div onmousedown="piano.playMusic(22)" onmouseup="piano.musicpause(22)" class="black" id="22" ></div>
             <div onmousedown="piano.playMusic(23)" onmouseup="piano.musicpause(23)" class="white" id="23" ></div>
-        </div>
-    
+			</div>
+		</div>
+        <div>
+          <label>gg</label>
         </div>
       </article>
     </main>
