--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -66,6 +66,11 @@ body {
     color:  var(--color10) ;
 }   
 
+.text-gauche {
+    background-color: none;
+    padding : 30px 50px 30px 50px; 
+}
+
 #page_main {
     padding : 20 10 10;
     top: 105px;
@@ -77,7 +82,7 @@ body {
     background-attachment: fixed;
     text-align: left;
 }
-   
+
 .container {
     padding: 20px 20px 20px 20px;
     font-size: 20px;
