--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
-    <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="pinao.css" rel="stylesheet" type="text/css"/>
     <title>Well Played Music</title>
-	<link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusic.png">
+	  <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusic.png">
   </head>
   <body>
     <div id="top-menu">
       <strong>
-        <a href="index.html" class="active">Acceuil</a>
-        <a href="trou_noir.html">Jouez</a>
+        <a href="acceuil.html" class="active">Acceuil</a>
+        <a href="index.html">Jouez</a>
         <a href="nebu.html">Crédits</a>
         <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
       </strong>
