--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -136,3 +136,15 @@ body {
     background-color: var(--color2);
     text-decoration: underline;
 }
+
+
+/* utilisé pour les touches activées depuis le clavier*/
+.blackActivated {
+    background-color: #00aafa;
+}
+
+.whiteActivated {
+    background-color: #c2c2c2;
+    box-shadow: 0 0 5px #c5c5c5, 0 0 25px #6b6b6b, 0 0 50px #585858;
+    transition: 300ms;
+}
