--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -4,17 +4,17 @@
     --color3 : #5f7683 ;
     --color4 : #586F7C ;
     --color-font : #1e3847;
-    --color5 : #708A94 ;
+    --color5 : #152D35 ;
     --color6 : #88A5AB ;
-    --color7 : #A0CFCD ;
-    --color8 : #9ec7d1 ;
-    --color9 : #D6E8E9 ;
+    --color7 : #345B63 ;
+    --color8 : #112031 ;
+    --color9 : #D4ECDD ;
     --color10: #ffffff ;
 
 }
 
 body {
-    background-color: var(--color8);
+    background-color: var(--color7);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: auto;
-    background-color: var(--color3);
+    background-color: var(--color5);
     overflow: auto;
     white-space: nowrap;
     margin: 0;
@@ -46,7 +46,7 @@ body {
 }
 
 #top-menu a:hover {
-    background-color: var(--color2);
+    background-color: var(--color8);
     border-radius: 10px;
     text-decoration: underline;
 }
@@ -116,7 +116,7 @@ body {
     position: absolute;
     width: 100%;
     height: 10%;
-    background-color: var(--color3);
+    background-color: var(--color5);
     overflow: auto;
     white-space: nowrap;
     text-align: center;
@@ -133,7 +133,7 @@ body {
 }
 
 .bas_de_page a:hover {
-    background-color: var(--color2);
+    background-color: var(--color8);
     text-decoration: underline;
 }
 
