--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -9,8 +9,8 @@
   <body>
     <div id="top-menu">
       <strong>
-        <a href="acceuil.html" class="active">Acceuil</a>
-        <a href="index.html">Jouer</a>
+        <a class="active" onclick="window.location.href = '/'">Acceuil</a>
+        <a onclick="window.location.href = '/jouer'">Jouez</a>
         <a href="credit.html">Crédits</a>
         <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
       </strong>
