--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music - Acceuil</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusicfinalversion.png" />
   </head>
   <body>
     <div id="top-menu">
       <strong>
-        <a class="active" onclick="window.location.href = '/'">Acceuil</a>
+        <a class="active" onclick="window.location.href = '/'"><img src="static/iconewellplaymusicfinalversion.png" alt="Accueil"/></a>
         <a onclick="window.location.href = '/jouer'">Jouez</a>
         <a href="credit.html">Crédits</a>
         <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
