--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
     <link href="static/CSS/style.css" rel="stylesheet" type="text/css"/>
     <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css"/>
     <title>Well Played Music</title>
-	  <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusic.png">
+	  <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusicfinalversion.png">
   </head>
   <body>
     <div id="top-menu">
       <strong>
-        <a class="active" onclick="window.location.href = '/'">Acceuil</a>
+        <a class="active" onclick="window.location.href = '/'"><img src="static/iconewellplaymusicfinalversion.png" alt="Accueil"/></a>
         <a onclick="window.location.href = '/jouer'">Jouez</a>
         <a href="nebu.html">Crédits</a>
         <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
