--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -10,7 +10,7 @@
   <body>
     <div id="top-menu">
       <strong>
-        <a class="active" onclick="window.location.href = '/'"><img src="static/iconewellplaymusicfinalversion.png" alt="Accueil"/></a>
+        <a class="active" onclick="window.location.href = '/'">Accueil</a>
         <a onclick="window.location.href = '/jouer'">Jouez</a>
         <a href="credit.html">Crédits</a>
         <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
