--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,12 @@
       <strong>
         <a class="active" onclick="window.location.href = '/'">Accueil</a>
         <a onclick="window.location.href = '/jouer'">Jouez</a>
-        <a href="nebu.html">Crédits</a>
-        <a href="#" style="text-size-adjust: 10px;">(on peut rajouter des onglets ici)</a>
       </strong>
     </div>
     <div id="en-tete">
       <header>
         <h1><p>Well Played Music</p></h1>
-        <h3><p>par NSI gang</p></h3>
+        <h3><p>par le groupe de NSI Saint-gènes</p></h3>
       </header>
     </div>
     <br>
