--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,13 @@
     <div id="top-menu">
       <strong>
         <a class="active" onclick="window.location.href = '/'">Accueil</a>
+	<b aria-label="logo" href="/"><img src="static/iconewellplaymusicfinalversion.png" alt="well played Music logo" width="50" height="50"></b>
         <a onclick="window.location.href = '/jouer'">Jouez</a>
       </strong>
     </div>
     <div id="en-tete">
       <header>
+	<br>
         <h1><p>Well Played Music</p></h1>
         <h3><p>par le groupe de NSI Saint-gènes</p></h3>
       </header>
