--- a/static/CSS/pinao.css
+++ b/static/CSS/pinao.css
@@ -51,11 +51,11 @@
 }
 
 .black:active {
-    background-color: #ffffff;
+    background-color: #d1d1d1;
 }
 
 .blackActivated {
-    background-color: #ffffff;
+    background-color: #d1d1d1;
         box-shadow: 0 0 5px #c5c5c5, 0 0 25px #6b6b6b,
     0 0 50px #9e9e9e;
 }
