--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/CSS/style.css" rel="stylesheet" type="text/css"/>
+    <link href="static/CSS/style_pia.css" rel="stylesheet" type="text/css"/>
     <link href="static/CSS/pinao.css" rel="stylesheet" type="text/css"/>
     <title>Well Played Music</title> 
     <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusicfinalversion.png">
