--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link href="static/CSS/style.css" rel="stylesheet" type="text/css" />
+    <link href="static/CSS/style_acc.css" rel="stylesheet" type="text/css" />
     <title>Well Played Music - Acceuil</title>
     <link rel="icon" type="image/png" sizes="16x16" href="static/iconewellplaymusicfinalversion.png" />
   </head>
@@ -25,12 +25,12 @@
     <br>
     <main id="page_main">
       <article style="color:rgb(255,255,255);">
-        <div class="text-gauche">
-          <p style="color:rgb(0,0,0); text-align:justify; font-size: 25px;">
+        <div class="zone_gauche">
+          <p style='color:rgb(255,255,255); text-align:justify; font-size: 22px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;'>
             Qui sommes-nous ? <br><br>
             Nous sommes une classe de terminale en spécialité N.S.I (Numérique et Science de l’Informatique)
-            du lycée Saint-Genès à Bordeaux. Afin de clôturer notre année par un projet, nous avons décidé de
-            nous lancer un défi : créer un site web qui nécessite de nombreuses compétences dans des domaines
+            au lycée Saint-Genès LaSalle à Bordeaux. Afin de clôturer notre année par un projet, nous avons décidé de
+            nous lancer un défi : créer un site web  musical et intéractif, nécessitant de nombreuses compétences dans des domaines
             bien variés (musique, design, programmation, etc…) ! <br>
             Notre équipe est constituée de la promotion
             2021-2022 au grand complet : Arthur Exposito, Victor Balu, Simon Dumesny et Guillaume Ozoux ; et
@@ -38,6 +38,11 @@
           </p>
         </div>
       </article>
+        <article>
+            <div class="zone_droite">
+                <img src="static/img_nsi_1.jpg">
+            </div>
+        </article>
     </main>
 
       <div class="bas_de_page">
