--- a/static/CSS/style_pia.css
+++ b/static/CSS/style_pia.css
@@ -16,6 +16,18 @@ body {
     background-attachment: fixed;
 }
 
+h1 {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 22px ;
+}
+
+h2 {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 22px ;
+}
+
 #top-menu {
     position: fixed;
     top: 0;
