--- a/static/CSS/style_acc.css
+++ b/static/CSS/style_acc.css
@@ -73,6 +73,12 @@ body {
 
 }
 
+.zone_gauche p{
+    color:rgb(255,255,255); 
+    text-align:justify; font-size: 22px; 
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .zone_droite {
     padding : 30px 50px 30px 50%;
     position: absolute;
