--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <main id="page_main">
-      <article style="color:rgb(255,255,255);">
+      <article>
         <div class="zone_gauche">
           <p>
             Qui sommes-nous ? <br><br>
