--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -34,7 +34,7 @@
             bien variés (musique, design, programmation, etc…) ! <br>
             Notre équipe est constituée de la promotion
             2021-2022 au grand complet : Arthur Exposito, Victor Balu, Simon Dumesny et Guillaume Ozoux ; et
-            oui, le succès de la spécialité NSI est tellement grand que nous ne sommes que 4 (avec la précieuse aide de notre professeur Joël Rivet !!
+            oui, le succès de la spécialité NSI est tellement grand que nous ne sommes que 4 (avec la précieuse aide de notre professeur Joël Rivet) !!
           </p>
         </div>
       </article>
