--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       <header>
 	<br>
         <h1><p>Well Played Music</p></h1>
-        <h3><p>par le groupe de NSI Saint-gènes</p></h3>
+        <h3><p>par le groupe de NSI Saint-Genès LaSalle Bordeaux</p></h3>
       </header>
     </div>
     <br>
