--- a/static/CSS/style_acc.css
+++ b/static/CSS/style_acc.css
@@ -9,6 +9,21 @@
 
 }
 
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--color5);
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color11);
+  border-radius: 30px;;
+  border: 3px solid var(--color7);
+}
+
 body {
     background-color: var(--color7);
     background-repeat: no-repeat;
